--- a/client/index.html
+++ b/client/index.html
@@ -1,5 +1,5 @@
 <head>
-	<title>My Generic Meteor App</title>
+	<title>TYoung Fitness</title>
 	<meta name='viewport' content='width=device-width, height=device-height'>
 </head>
 
